--- a/app_cad_usuarios/templates/usuarios/home.html
+++ b/app_cad_usuarios/templates/usuarios/home.html
@@ -13,11 +13,16 @@
       </div>
     </nav>
 
-    <div class="container">
-      <h1>Cadastro de Usuários</h1>
-      Nome<input type="text" /> Idade<input type="text" />
-      <button>Enviar</button>
-    </div>
+    <form action="{% url 'listagem_usuario' %}" method="post">
+      <div class="container">
+        <h1>Cadastro de Usuários</h1>
+        Nome<input name="nome" type="text" /> Idade<input
+          name="idade"
+          type="text"
+        />
+        <button>Enviar</button>
+      </div>
+    </form>
   </body>
 </html>
 <!-- parei no 16:28 -->
